dnl require autoconf 2.60 (AS_ECHO/AS_ECHO_N)
AC_PREREQ([2.60])
define(_CLIENT_VERSION_MAJOR, 2)
define(_CLIENT_VERSION_MINOR, 0)
define(_CLIENT_VERSION_REVISION, 3)
define(_CLIENT_VERSION_BUILD, 0)
define(_CLIENT_VERSION_IS_RELEASE, true)
define(_COPYRIGHT_YEAR, 2025)
define(_COPYRIGHT_HOLDERS,[The LightningCashr developers (%s)])
define(_COPYRIGHT_HOLDERS_SUBSTITUTION,[[LNCR]])
define(_COPYRIGHT_HOLDERS_SUBSTITUTION2,[[LNCR]])
AC_INIT([LightningCashr Core],[_CLIENT_VERSION_MAJOR._CLIENT_VERSION_MINOR._CLIENT_VERSION_REVISION],[https://github.com/MerlinMagic2018/LightningCash-R/issues]
,[lncr],[https://lightningcash-reborn.space/])
AC_CONFIG_SRCDIR([src/validation.cpp])
AC_CONFIG_HEADERS([src/config/bitcoin-config.h])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_MACRO_DIR([build-aux/m4])

BITCOIN_DAEMON_NAME=lightningcashrd
BITCOIN_GUI_NAME=lightningcashr-qt
BITCOIN_CLI_NAME=lightningcashr-cli
BITCOIN_TX_NAME=lightningcashr-tx
